--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "calendar-link": "^2.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "countries-and-timezones": "^3.7.2",
     "cryptr": "^6.3.0",
     "dayjs": "^1.11.12",
     "embla-carousel-react": "^8.1.8",
